--- a/常用命令.md
+++ b/常用命令.md
@@ -1,44 +1,32 @@
-\\exfile.tp-link.net\ÊÖ»úÊÂÒµ²¿\ÑĞ·¢²¿\Public\xĞÒ×ÓË§\¹¤¾ß\windows¼¤»î
-88969
-86728969
-ssh-keygen -t rsa -C
-http://mobilesvn.rd.tp-link.net/svn/Training/2017/
-git clone ssh://guishaoli@mobilegit.rd.tp-link.net:29418/training/git_training.git -b training-2017
+#####86728969
+#####ssh-keygen -t rsa -C
+#####http://mobilesvn.rd.tp-link.net/svn/Training/2017/
+#####git clone ssh://guishaoli@mobilegit.rd.tp-link.net:29418/training/git_training.git -b training-2017
 
 
-³£ÓÃ¹¤¾ß£º\\software.tp-link.net
-SVN http://mobilesvn.rd.tp-link.net/svn/
-ÎÄ¼ş¹²Ïí \\exfile.tp-link.net
+#####å¸¸ç”¨å·¥å…·ï¼š\\software.tp-link.net
+#####SVN http://mobilesvn.rd.tp-link.net/svn/
+#####æ–‡ä»¶å…±äº« \\exfile.tp-link.net
 
-scp -P 29418 -p guishaoli@mobilegit.rd.tp-link.net:/hooks/commit-msg .git/hooks/
+#####scp -P 29418 -p guishaoli@mobilegit.rd.tp-link.net:/hooks/commit-msg .git/hooks/
 
 
 ---------
-git add file    ½«fileÌí¼Ó½øÈëÔİ´æÇø
-git commit     ½«Ôİ´æÇøµÄÄÚÈİÌá½»µ½±¾µØ·ÖÖ§
-git commit --ammend ½Ó×ÅÖ®Ç°µÄcommit¼ÌĞø½«Ôİ´æÇøÄÚÈİÌá½»µ½±¾µØ·ÖÖ§£¬²»¸Ä¶¯Change-Id
-git checkout -- file ¶ªÆú¶ÔfileµÄĞŞ¸Ä£¬ÈÃÎÄ¼ş»Øµ½×î½üÒ»´Îcommit»òÕßaddµÄ×´Ì¬£¬¿ÉÒÔ³·ÏúÉ¾³ı
-git reset HEAD file °ÑÔİ´æÇøµÄĞŞ¸Ä³·Ïú
-git rm file É¾³ıÎÄ¼ş
-git checkout -b newbranch ´´½¨ĞÂµÄ·ÖÖ§²¢ÇĞ»»µ½ĞÂµÄ·ÖÖ§£¬Ò²¿ÉÒÔÊ¹ÓÃgit branch newbranchºÍgit checkout newbranchµÄ×éºÏ
-git merge newbranch ½«newbranchºÏ²¢µ½µ±Ç°·ÖÖ§
-git branch -d newbranch É¾³ınewbranch·ÖÖ§
-git merge --no-ff -m "log" newbranch ½«newbranch·ÖÖ§ºÍµ±Ç°·ÖÖ§ºÏ²¢ÇÒÌá½»µ½ĞÂµÄ¡°°æ±¾¡±£¬¿ÉÒÔ±£Áô·ÖÖ§ÀúÊ·
-git stash ½«µ±Ç°¹¤×÷´æ´¢
-git stash list ÏÔÊ¾¹¤×÷´æ´¢ÁĞ±í
-git stash apply  stash@{0} »Ö¸´stash@{0}´¦µÄ¹¤×÷ÄÚÈİ£¬²»É¾´¦stashÄÚÈİ
-git stash drop É¾³ıstashÄÚÈİ
-git stash pop Ö´ĞĞÒÔÉÏÁ½¸öÃüÁî
-git branch -D name Ç¿ĞĞ¶ªÆúname·ÖÖ§
-
-
-
-
-
-
-
-
-
-
+##### git add file    å°†fileæ·»åŠ è¿›å…¥æš‚å­˜åŒº
+#####git commit     å°†æš‚å­˜åŒºçš„å†…å®¹æäº¤åˆ°æœ¬åœ°åˆ†æ”¯
+#####git commit --ammend æ¥ç€ä¹‹å‰çš„commitç»§ç»­å°†æš‚å­˜åŒºå†…å®¹æäº¤åˆ°æœ¬åœ°åˆ†æ”¯ï¼Œä¸æ”¹åŠ¨Change-Id
+#####git checkout -- file ä¸¢å¼ƒå¯¹fileçš„ä¿®æ”¹ï¼Œè®©æ–‡ä»¶å›åˆ°æœ€è¿‘ä¸€æ¬¡commitæˆ–è€…addçš„çŠ¶æ€ï¼Œå¯ä»¥æ’¤é”€åˆ é™¤
+#####git reset HEAD file æŠŠæš‚å­˜åŒºçš„ä¿®æ”¹æ’¤é”€
+#####git rm file åˆ é™¤æ–‡ä»¶
+#####git checkout -b newbranch åˆ›å»ºæ–°çš„åˆ†æ”¯å¹¶åˆ‡æ¢åˆ°æ–°çš„åˆ†æ”¯ï¼Œä¹Ÿå¯ä»¥ä½¿ç”¨git branch newbranchå’Œgit checkout newbranchçš„ç»„åˆ
+#####git merge newbranch å°†newbranchåˆå¹¶åˆ°å½“å‰åˆ†æ”¯
+#####git branch -d newbranch åˆ é™¤newbranchåˆ†æ”¯
+#####git merge --no-ff -m "log" newbranch å°†newbranchåˆ†æ”¯å’Œå½“å‰åˆ†æ”¯åˆå¹¶ä¸”æäº¤åˆ°æ–°çš„â€œç‰ˆæœ¬â€ï¼Œå¯ä»¥ä¿ç•™åˆ†æ”¯å†å²
+#####git stash å°†å½“å‰å·¥ä½œå­˜å‚¨
+#####git stash list æ˜¾ç¤ºå·¥ä½œå­˜å‚¨åˆ—è¡¨
+#####git stash apply  stash@{0} æ¢å¤stash@{0}å¤„çš„å·¥ä½œå†…å®¹ï¼Œä¸åˆ å¤„stashå†…å®¹
+#####git stash drop åˆ é™¤stashå†…å®¹
+#####git stash pop æ‰§è¡Œä»¥ä¸Šä¸¤ä¸ªå‘½ä»¤
+#####git branch -D name å¼ºè¡Œä¸¢å¼ƒnameåˆ†æ”¯
 
 
