--- a/常用命令.md
+++ b/常用命令.md
@@ -28,5 +28,5 @@
 ##### git stash drop 删除stash内容
 ##### git stash pop 执行以上两个命令
 ##### git branch -D name 强行丢弃name分支
- 
+##### git cherry-pick commit-id1 commit-id2 ...将commit-id1、commit-id2...提交到当前分支 
 
