增加32、33行命令

--- a/常用命令.md
+++ b/常用命令.md
@@ -29,4 +29,5 @@
 ##### git stash pop 执行以上两个命令
 ##### git branch -D name 强行丢弃name分支
 ##### git cherry-pick commit-id1 commit-id2 ...将commit-id1、commit-id2...提交到当前分支 
-
+##### git rebase -i HEAD~3 修改提交历史
+##### git branch -f master HEAD~3 把master分支移动到当前分支的往前数第三个提交版本
