--- a/常用命令.md
+++ b/常用命令.md
@@ -35,3 +35,8 @@
 ##### git describe 显示离当前提交最近的tag
 ##### git fetch 从远程分支获取最新版本到本地，不会自动合并
 ##### git branch -u o/master foo 
+##### git push origin foo:master 如果远程库没有master分支，则在远程库创建一个master分支
+##### git push origin :foo 删除远程库的foo分支，同时删除本地关联
+##### git branch -vv 查看当前分支跟踪的远程分支
+
+##### ls -aR 列出当前目录下的所有文件
