--- a/工作日常.md
+++ b/工作日常.md
@@ -35,3 +35,9 @@
 2017.08.16 11点23分 编写脚本进入一个坑，appium无法让真机进行旋转屏幕的操作，偏偏计算器app非要进入横屏才能进行科学计算，这算什么事啊，设计是吃干饭的吗，别人家的计算器都是有模式切换按钮的，这是是通过旋转屏幕才能切换模式，不注意的话可能永远也发现不了科学计算模式，真的很坑、很坑啊！
 
 16点32分 突然感觉这个app任务不简单，有很多问题没解决，比如网络连接权限，多层内容展示，这里要写的内容太多啦，光是界面就有一大堆，实在很烦啊，没有头绪。
+
+2017.08.17 到职正式满一个月了，对自己的工作内容有了大致的了解，只是，方向确定了，但是具体的坑还是得自己去填。今天早上还要回复如何提高工作效率，我怎么知道，只能走一步算一步。
+
+08点33分 现在的正经的想想怎么编写bugzilla的移动端app了重点在于url的解析。
+
+2017.08.24 10点01分 好多天没有更新内容了，主要是这几天被Androidapp开发搞得焦头烂额，十分烦躁。
