--- a/工作日常.md
+++ b/工作日常.md
@@ -41,3 +41,5 @@
 08点33分 现在的正经的想想怎么编写bugzilla的移动端app了重点在于url的解析。
 
 2017.08.24 10点01分 好多天没有更新内容了，主要是这几天被Androidapp开发搞得焦头烂额，十分烦躁。
+
+2017年9月5日13:49:28 很久没有写工作日常了，这阵子糟心事儿很多，且不说工作上的事儿，身体也有些异常，还以为自己好了呢，这就是生存吧。
