--- a/工作日常.md
+++ b/工作日常.md
@@ -43,3 +43,7 @@
 2017.08.24 10点01分 好多天没有更新内容了，主要是这几天被Androidapp开发搞得焦头烂额，十分烦躁。
 
 2017年9月5日13:49:28 很久没有写工作日常了，这阵子糟心事儿很多，且不说工作上的事儿，身体也有些异常，还以为自己好了呢，这就是生存吧。
+
+2017年9月6日13:53:53 时间是一种神奇的东西，我到现在还是浑浑噩噩，不知所错，也看不到前方，十分尴尬。
+
+2017年9月7日08:37:52 是时候振作了，这场胃病削去的精神的慢慢找回来，但愿我还是健康的。选择测试岗位，没想到还是做android，虽然不是开发，现在的课题还是android性能检测，必须学习android性能相关原理了，这很尴尬，还不如android开发。
