--- a/工作日常.md
+++ b/工作日常.md
@@ -50,4 +50,6 @@
 
 2017年9月7日08:37:52 是时候振作了，这场胃病削去的精神的慢慢找回来，但愿我还是健康的。选择测试岗位，没想到还是做android，虽然不是开发，现在的课题还是android性能检测，必须学习android性能相关原理了，这很尴尬，还不如android开发。
 
+2017年9月11日16:59:07 总是会遇到奇奇怪怪的问题，比如as真机调试总会显示offline，比如SurfaceFlinger在android7上运行不了，比如手机莫名其妙就无法安装程序，比如测试过的性能项目被认定没有说服力，比如小米5s拍摄不了120fps视频。
+
 
