--- a/工作日常.md
+++ b/工作日常.md
@@ -52,4 +52,8 @@
 
 2017年9月11日16:59:07 总是会遇到奇奇怪怪的问题，比如as真机调试总会显示offline，比如SurfaceFlinger在android7上运行不了，比如手机莫名其妙就无法安装程序，比如测试过的性能项目被认定没有说服力，比如小米5s拍摄不了120fps视频。
 
+2017年9月13日15:25:04 还是有很多问题，比如如何测量界面跳转时间，如何准确定位问题代码，如何使用Python集成工具，我的返程票还能不能买到。
 
+2017年9月13日16:02:53 下定决心了，准备抢购小米6白色版。也算是对小米5的补偿了吧，之前的白色小米5缘分已尽，是不是意味着小米6的新的缘分呢？
+
+2017年9月14日08:13:20 不知不觉又是周四，国庆回家的票已经买好了，回来的票也都买好了。就是这周的任务进展不大。
