--- a/工作日常.md
+++ b/工作日常.md
@@ -57,3 +57,7 @@
 2017年9月13日16:02:53 下定决心了，准备抢购小米6白色版。也算是对小米5的补偿了吧，之前的白色小米5缘分已尽，是不是意味着小米6的新的缘分呢？
 
 2017年9月14日08:13:20 不知不觉又是周四，国庆回家的票已经买好了，回来的票也都买好了。就是这周的任务进展不大。
+
+2017年9月18日09:00:48 头好疼，很难受。
+
+2017年9月20日11:03:49 身体又出现异常了，周末害的再去医院查看一番，希望不是疑难杂症，感觉从五月份到现在就一直出问题，整个人要么精神状态不好，要么生理健康有问题，就像是得罪了神灵一样，总有那么些问题不让我正常生活。希望只是杞人忧天吧。
